assets/css/style.css
/* ... */
  .ad-list .ad-list-app:hover {
    box-shadow: 2px 4px 8px 0px rgba(46, 61, 73, 0.2); }
    .ad-list .ad-list-app:hover aside.options {
      right: 0; }

.ad-list .ad-filterbyappname {
  display: inline-block;
  margin-right: 10px; }
  .ad-list .ad-filterbyappname input {
    height: 30px;
    width: 300px; }

.ad-metrics-summary > [class*="col-"] {
  padding-right: 0; }

.ad-metrics-summary .progress-container {
  position: relative;
  padding-left: 48px;
  min-height: 40px; }
  .ad-metrics-summary .progress-container .progress-wrapper {
    position: absolute;
    left: 0;
    width: 40px;
    height: 40px;
    display: inline-block; }
  .ad-metrics-summary .progress-container .progress-text {
    float: left;
    letter-spacing: 0.02em;
    word-spacing: 0.1em;
    color: #888;
    font-size: 11px;
    line-height: 14px;
    padding: 3px 0 0 0; }
  .ad-metrics-summary .progress-container .sub-title {
    font-family: "Source Sans Pro Semi Bold";
    text-transform: uppercase;
    color: #aaa;
    font-size: 12px;
    letter-spacing: 0.02em;
    padding: 0 0 5px 0; }
  @media screen and (max-width: 768px) {
    .ad-metrics-summary .progress-container {
      margin-bottom: 15px; } }

.ad-detail {
  position: relative;
  padding: 0 0 0 84px;
  margin: 0;
  height: 100%; }
  .ad-detail .ad-detail-view-container {
    position: relative;
    height: 100%; }
    .ad-detail .ad-detail-view-container .ad-detail-view {
      padding: 0;
      position: absolute;
      height: 100%;
      top: 0;
      left: 0;
      width: 100%;
      overflow: auto; }
      .ad-detail .ad-detail-view-container .ad-detail-view .plugin-container {
        position: relative;
        width: 100%;
        height: 100%;
        border: 1px solid #f7f7f7; }
        .ad-detail .ad-detail-view-container .ad-detail-view .plugin-container .plugin-loading-container {
          display: flex;
          height: 500px;
          align-items: center;
          justify-content: center;
          width: 100%; }
          .ad-detail .ad-detail-view-container .ad-detail-view .plugin-container .plugin-loading-container .loadingContainer {
            max-width: 200px;
            left: auto; }
      .ad-detail .ad-detail-view-container .ad-detail-view .page404 {
        font-size: 2rem;
        text-align: center;
        margin-top: 200px;
        height: 100%;
        justify-content: center;
        color: #B3B3B3; }
  .ad-detail .ad-detail-sidebar {
    position: absolute;
    left: 0;
    top: 0;
    width: 84px;
    height: 100%;
    padding-top: 0;
    z-index: 2; }
    .ad-detail .ad-detail-sidebar .ad-detail-sidebar-container {
      list-style: none;
      padding: 0; }
      .ad-detail .ad-detail-sidebar .ad-detail-sidebar-container li {
        text-align: center;
        font-size: 0.8rem;
        text-transform: uppercase; }
        .ad-detail .ad-detail-sidebar .ad-detail-sidebar-container li a {
          padding: 15px 5px 15px 2px;
          display: block;
          border-left: 5px solid transparent; }
          .ad-detail .ad-detail-sidebar .ad-detail-sidebar-container li a .img-container {
            border-radius: 50%;
            background: #fff;
            width: 40px;
            height: 40px;
            margin: 0 auto 5px auto; }
            .ad-detail .ad-detail-sidebar .ad-detail-sidebar-container li a .img-container .img-responsive {
              padding: 10px; }
            .ad-detail .ad-detail-sidebar .ad-detail-sidebar-container li a .img-container .img-responsive.mappings {
              padding: 5px; }
          .ad-detail .ad-detail-sidebar .ad-detail-sidebar-container li a:hover, .ad-detail .ad-detail-sidebar .ad-detail-sidebar-container li a.active {
            text-decoration: none; }

.loadingBar {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 4px;
  z-index: 800;
  transform: translateX(100%);
  display: block;
  animation: shift-rightwards 0.5s ease-in-out infinite;
  animation-delay: .2s; }

.ad-loading {
  background: rgba(255, 255, 255, 0.9);
  overflow: hidden;
  display: flex;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  align-items: center;
  justify-content: center; }

@keyframes shift-rightwards {
  0% {
    transform: translateX(-100%); }
  40% {
    transform: translateX(0); }
  60% {
    transform: translateX(0); }
  100% {
    transform: translateX(100%); } }

#appbase-dashboard {
  height: 100%; }

.app-container {
  padding: 0;
  height: 100%;
  position: relative;
  padding: 0; }

#dashboard-container {
  padding: 60px 0 0 0;
  position: absolute;
  right: 0;
  top: 0;
  overflow: auto;
  height: 100%;
  width: 100%; }
  #dashboard-container .page-info {
    margin: 0 0 15px 0; }
    #dashboard-container .page-info .page-title {
      margin: 0 0 5px 0; }

.ad-detail-page {
  margin: 0; }
  .ad-detail-page .ad-detail-page-header {
    background: #fff;
    padding: 22px 15px;
    border-bottom: 1px solid #dedede;
    position: relative; }
    .ad-detail-page .ad-detail-page-header .ad-detail-page-title {
      font-size: 1.7rem;
      line-height: 2.2rem;
      font-family: "Source Sans Pro Semi Bold";
      margin: 0;
      display: inline-block; }
    .ad-detail-page .ad-detail-page-header .ad-detail-page-header-sidebar {
      float: right;
      text-align: right;
      padding: 0; }
    .ad-detail-page .ad-detail-page-header.header-inline-summary p {
      display: inline;
      padding-left: 10px;
      margin: 0px 0 3px 0; }
    @media (max-width: 992px) {
      .ad-detail-page .ad-detail-page-header.header-inline-summary p {
        display: block;
        padding-left: 0; } }
    .ad-detail-page .ad-detail-page-header.header-align-end {
      display: flex;
      align-items: flex-end; }
      @media (max-width: 992px) {
        .ad-detail-page .ad-detail-page-header.header-align-end {
          display: block; } }
  .ad-detail-page .ad-detail-page-body {
    padding: 15px; }
/* ... */

